--- a/src/main/webapp/animal/consultar.xhtml
+++ b/src/main/webapp/animal/consultar.xhtml
@@ -1,32 +1,29 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
- "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd" >
+<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
- xmlns:h="http://xmlns.jcp.org/jsf/html"
- xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
- xmlns:p="http://primefaces.org/ui"
- xmlns:f="http://xmlns.jcp.org/jsf/core">
-  <ui:composition>
-    <ui:define name="titulo">
-      <p:outputPanel>Animais</p:outputPanel>
-    </ui:define>
+  xmlns:h="http://xmlns.jcp.org/jsf/html"
+  xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+  xmlns:f="http://xmlns.jcp.org/jsf/core"
+  xmlns:p="http://primefaces.org/ui">
+<head>
+  	<link rel="StyleSheet" type="text/css" href="../css/consulta.css" media="screen"/>
+</head>
 
-    <ui:define name="conteudo">
-      <h:form id="formTabelaAnimais">
-
-        <p:commandButton value="Cadastrar animais" action="manter" /><br />
-        <p:dataTable value="#{animalBean.animais}" var="animal"
-        id="tabelaEditoria" paginator="tr	ue" rows="5">
-
-        <f:facet name="header">Editorias</f:facet>	
-        <p:column headerText="Código">
-          <h:outputText value="#{animal.animal_id}" />
-        </p:column>
-        <p:column headerText="Nome">
-          <h:outputText value="#{editoria.nome}" />
-        </p:column>
-      </p:dataTable>
-    </h:form>
-    </ui:define>
-  </ui:composition>
+<body>
+    <div id="layout">
+        <div id="aside">
+            <p>Dogmania</p>
+        </div>
+        <div id="content">
+            <div>
+            <p:dataTable value="#{animalBean.animais}" var="animal"
+        id="tabelaAnimal" paginator="true" rows="5">
+                <p:column headerText="Nome">
+                    <h:outputText value="#{animal.nome}" />
+                </p:column>
+        </p:dataTable>
+            </div>	
+        </div>
+    </div>
+</body>
+  
 </html>
