css arrumando umas coisas na class de produto

--- a/src/main/webapp/home.xhtml
+++ b/src/main/webapp/home.xhtml
@@ -5,12 +5,23 @@
   xmlns:f="http://xmlns.jcp.org/jsf/core"
   xmlns:p="http://primefaces.org/ui">
 <head>
-  	<link rel="StyleSheet" type="text/css" href="css/home.css" media="screen"/>
+  	<link rel="StyleSheet" type="text/css" href="css/consulta.css" media="screen"/>
 </head>
 
 <body>
-    <div>
-        Login
+    <div id="layout">
+        <div id="aside">
+            <p>Dogmania</p>
+            <div>
+              <h:link value="Consultar" outcome="produto/consultar"/>
+              <h:link value="Home" outcome="home" />
+            </div>
+        </div>
+        <div id="content">
+            <div>
+               
+            </div>	
+        </div>
     </div>
 </body>
   
