kkkk acho que acabei mas tem coisa pra arrumar

--- a/src/main/webapp/home.xhtml
+++ b/src/main/webapp/home.xhtml
@@ -13,7 +13,7 @@
         <div id="aside">
             <p>Dogmania</p>
             <div>
-              <h:link value="Consultar" outcome="produto/consultar"/>
+              <h:link value="Consultar" outcome="produto/produto"/>
               <h:link value="Home" outcome="home" />
             </div>
         </div>
